changed nav font and added social media icons png

--- a/modern-business.css
+++ b/modern-business.css
@@ -43,6 +43,11 @@ body {
     }
 }
 
+.navbar{
+  font-family: Montserrat;
+  font-size: 1em;
+}
+
 .events{
   margin-top: 2em;
   text-align: center;
