--- a/tridelta.css
+++ b/tridelta.css
@@ -12,35 +12,35 @@ body{
 }
 
 body {
-  padding-top: 54px;
+  padding-top: 0px;
 }
 
 @media and (min-width: 992px) {
   body {
-    padding-top: 56px;
+    padding-top: 0px;
   }
 }
 
+h1{
+  font-family: Quicksand;
+  text-transform: uppercase;
+  font-size: 2.5em;
+}
+
+h2{
+  font-family: Quicksand;
+  text-decoration: underline;
+  font-size: 2.5em;
+}
+
+h3{
+  font-family: Quicksand;
+  font-size: 1.5em;
+}
+
+
 .navbar-collapse {
   text-align:center;
-}
-
-
-@media and (min-width: 768px){
-  .logo-navbar{
-  position: absolute;
-  height: 20%;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 5px;
-  margin-bottom: -40px;
-}
-
-.navbar>.container .navbar-brand-centered, 
-.navbar>.container-fluid .navbar-brand-centered {
-        margin-left: -80px;
-        position: relative;
-    }
 }
 
 .navbar{
@@ -54,11 +54,6 @@ body {
   font-family: Quicksand;
 }
 
-h2{
-  font-family: Quicksand;
-  text-decoration: underline;
-  font-size: 2.5em;
-}
 
 .events-dates{
   font-family: Montserrat;
