--- a/tridelta.css
+++ b/tridelta.css
@@ -48,6 +48,11 @@ h3{
   font-size: 1em;
 }
 
+.logo-margin{
+  margin-bottom: -50px;
+  z-index: 1;
+}
+
 .events{
   margin-top: 2em;
   text-align: center;
@@ -67,15 +72,6 @@ h3{
     margin-left: -50px !important;  /* 50% of your logo width 
 }
 */
-
-.nav-logo{
-  background: url(http://disputebills.com/site/uploads/2015/10/dispute.png) center / contain no-repeat;
-  transform: translateX(-50%);
-  left: 50%;
-  position: absolute;
-  width: 200px; 
-}
-
 
 
 body {
