--- a/tridelta.css
+++ b/tridelta.css
@@ -17,11 +17,11 @@ body {
   padding-top: 0px;
 }
 
-@media and (min-width: 992px) {
+/*@media and (min-width: 2px) {
   body {
     padding-top: 0px;
   }
-}
+}*/
 
 h1 {
   font-family: Quicksand;
@@ -88,7 +88,7 @@ p {
 
 /*------BANNER START------*/
 .banner {
-  padding-top: 4.75em;
+  margin-top:1em;
   width:100%;
   display: block;
   position: relative;
@@ -176,6 +176,7 @@ p {
 .sister-body{
   margin-left: 1em;
   margin-right: 1em;
+  margin-bottom: 2em;
   font-family: Montserrat;
   font-size:2.99vh;
   word-wrap: break-word;
@@ -190,21 +191,16 @@ p {
   word-wrap: break-word;
 }
 
+.carousel-inner{
+  margin-top: 5.5em;
+}
+
 /* SISTERHOOD PAGE END */
 
-
-.carousel-item {
-  height: 65vh;
-  min-height: 300px;
-  background: no-repeat center center scroll;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  max-width: 100%;
-}
 
 .portfolio-item {
   margin-bottom: 30px;
 }
+
+
 
