--- a/tridelta.css
+++ b/tridelta.css
@@ -6,6 +6,8 @@
 
 @import url(https://fonts.googleapis.com/css?family=Quicksand);
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
+@import url(https://fonts.googleapis.com/css?family=Dancing+Script);
+
 
 body{
    font-family: 'Open Sans',serif;
@@ -17,18 +19,14 @@ body {
 
 @media and (min-width: 992px) {
   body {
-    padding-top: 0px;
+    padding-top: 56px;
   }
 }
 
 
 /* NAVIGATION START */
 
-h1{
-  font-family: Quicksand;
-  text-transform: uppercase;
-  font-size: 2.5em;
-}
+
 
 h2{
   font-family: Quicksand;
@@ -42,6 +40,15 @@ h3{
   font-size: 1.5em;
 }
 
+h4 {
+  font-family: "Dancing Script";
+  font-size: 40px;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: 500;
+  line-height: 26.4px;
+}
+
 
 .navbar-collapse {
   text-align:center;
@@ -50,6 +57,11 @@ h3{
 .navbar{
   font-family: Montserrat;
   font-size: 1em;
+}
+
+.nav-item{
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .logo-margin{
@@ -62,13 +74,22 @@ h3{
   text-align: center;
   font-family: Quicksand;
 
-.navbar-nav > li{
+/*.navbar-nav > li{
   padding-left:4em;
 }
 
 
 /* NAVIGATION END */
 
+.banner-image{
+    /* Full height */
+    width: 100%;
+    height: 50%; 
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 /* FOOTER START */
 
@@ -93,6 +114,20 @@ h3{
 
 /* EVENTS PAGE END */
 
+
+
+/* LEADERSHIP PAGE START */
+.w3-padding-16 {
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+
+/* LEADERSHIP PAGE END */
+
+
+
+
 .carousel-item {
   height: 65vh;
   min-height: 300px;
@@ -101,7 +136,6 @@ h3{
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  max-width: 100%;
 }
 
 .portfolio-item {
