--- a/tridelta.css
+++ b/tridelta.css
@@ -23,6 +23,8 @@ body {
   }
 }*/
 
+
+
 h1 {
   font-family: Quicksand;
   text-transform: uppercase;
@@ -51,8 +53,6 @@ p {
 }
 
 
-
-
 /*------NAVIGATION START------*/
 .navbar-collapse {
   text-align:center;
@@ -78,18 +78,11 @@ p {
 
 /* NAVIGATION END */
 
-
-
-/*------FOOTER START------*/
-.ginsystem-login {
-  font-family: Quicksand;
-}
-/* FOOTER END */
-
 /*------BANNER START------*/
 .banner {
   margin-top:1em;
   width:100%;
+  height: auto;
   display: block;
   position: relative;
 }
@@ -107,7 +100,7 @@ p {
   left: 50%;
   transform: translate(-50%, -50%);
   color: #FEA17E;
-  text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+  text-shadow: 3px 5px 4px rgba(0,0,0,0.3);
   letter-spacing: 1em;
   font-family: Quicksand;
   text-transform: uppercase;
@@ -157,6 +150,8 @@ p {
   text-shadow: 4px 4px 3px rgba(0,0,0,0.1); 
   letter-spacing: 0.3em;
 }
+
+
 /* EVENTS PAGE END */
 
 /*------SISTERHOOD PAGE START------*/
@@ -164,6 +159,8 @@ p {
 .sisterhood-page{
   margin-top: 5em;
   margin-bottom: 5em;
+  /*margin-left: 2em;
+  margin-right: 2em;*/
 }
 
 .sister-summary{
@@ -178,7 +175,16 @@ p {
   margin-right: 1em;
   margin-bottom: 2em;
   font-family: Montserrat;
-  font-size:2.99vh;
+  font-size:2.5vh;
+  word-wrap: break-word;
+}
+
+.sister-body1{
+  margin-left: 1em;
+  margin-right: 1em;
+  margin-bottom: 2em;
+  font-family: Montserrat;
+  font-size:2.5vh;
   word-wrap: break-word;
 }
 
@@ -189,18 +195,99 @@ p {
   font-size:4.25vh;
   font-family: Quicksand;
   word-wrap: break-word;
+  text-shadow: 3px 2px 2px rgba(0,0,0,0.1); 
 }
 
-.carousel-inner{
-  margin-top: 5.5em;
+.container img {
+    width: 100%;
+    height: auto;
+    overflow: hidden; 
 }
 
+.polaroid {
+  position: relative;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+ 
+.polaroid img {
+  border: 10px solid #FDCFC2;
+  border-bottom: 45px solid #FDCFC2;
+}
+
+.polaroid p {
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  bottom: 0px;
+  font: 400 18px/1 'Kaushan Script', cursive;
+  color: #888;
+}
 /* SISTERHOOD PAGE END */
+
+/*------FOOTER START------*/
+.ginsystem-login {
+  font-family: Montserrat;
+}
+
+.ginsystem-login input {
+  width: 80%;
+  font-size: 1em;
+}
+
+.username, .password {
+  margin: 0px auto;
+}
+
+.gin-login {
+  width: 80%;
+  display: block;
+  margin: 0px auto;
+}
+
+.ginsystem-login form {
+  align-content: center;
+}
+
+.footer-text{
+  color:white;
+  text-align: center;
+  font-family: Quicksand;
+  font-size: 1.25em;
+  font-size:2.1vw;
+  align-content: center;
+}
+
+
+.fa-facebook-f{
+  margin-right: 10px;
+  font-size:1.5em; 
+}
+
+.fa-instagram{
+  margin-right: 10px;
+  font-size:1.5em; 
+}
+
+.fa-pinterest-p{
+  margin-right: 10px;
+  font-size:1.5em; 
+}
+
+.fa-twitter{
+  margin-right: 10px;
+  font-size:1.5em; 
+}
+/* FOOTER END */
 
 
 .portfolio-item {
   margin-bottom: 30px;
 }
 
+.social-media {
+  color: Tomato;
+  text-align: center;
+}
 
 
