fixed footer styling for template, events, and sisterhood

--- a/tridelta.css
+++ b/tridelta.css
@@ -304,7 +304,8 @@ p {
   align-content: center;
 }
 .footer-text2{
-  margin-top: 1em;
+  margin-top: 2.75vh;
+  margin-bottom:3vh;
   color:white;
   text-align: center;
   font-family: Quicksand;
@@ -314,6 +315,10 @@ p {
   align-content: center;
 }
 
+.social-media {
+  color: white;
+  text-align: center;
+}
 
 .fa-facebook-f{
   margin-right: 10px;
@@ -334,6 +339,11 @@ p {
   margin-right: 10px;
   font-size:5vh; 
 }
+
+.fa-tumblr{
+  margin-right: 10px;
+  font-size:5vh; 
+}
 /* FOOTER END */
 
 
@@ -341,9 +351,6 @@ p {
   margin-bottom: 30px;
 }
 
-.social-media {
-  color: Tomato;
-  text-align: center;
-}
+
 
 
