--- a/tridelta.css
+++ b/tridelta.css
@@ -6,13 +6,9 @@
 
 @import url(https://fonts.googleapis.com/css?family=Quicksand);
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
-@import url(https://fonts.googleapis.com/css?family=Dancing+Script);
-
-
 @import url(https://fonts.googleapis.com/css?family=Fredericka+the+Great);
 @import url(https://fonts.googleapis.com/css?family=Handlee);
-
-
+@import url(https://fonts.googleapis.com/css?family=Dancing+Script);
 
 /*body{
    font-family: 'Open Sans',serif;
@@ -24,14 +20,11 @@ body {
 
 /*@media and (min-width: 2px) {
   body {
-    padding-top: 56px;
+    padding-top: 0px;
   }
 }*/
  
 
-
-
-/* NAVIGATION START */
 
 
 h1 {
@@ -55,7 +48,6 @@ h3 {
   font-size:2.3vw;
 }
 
-
 h4 {
   font-family: "Dancing Script";
   font-size: 40px;
@@ -64,7 +56,6 @@ h4 {
   font-weight: 500;
   line-height: 26.4px;
 }
-
 
 h5{
   font-family: Quicksand;
@@ -81,8 +72,11 @@ h6 {
   letter-spacing: 0.3em;
 }
 
-p {
 
+p {
+  font-family: Quicksand;
+  font-size:0.5em;
+  font-size:3.2vw;
 }
 
 
@@ -100,36 +94,17 @@ p {
   padding-right: 1em;
 }
 
-.nav-item{
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
 .logo-margin{
   margin-bottom: -50px;
   z-index: 1;
 }
 
-.events{
-  margin-top: 2em;
-  text-align: center;
-  font-family: Quicksand;
-
-
-
-/* NAVIGATION END */
-
-
-.banner-image{
-    /* Full height */
-    width: 100%;
-    height: 50%; 
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+.navbar-nav > li{
+  padding-left:2em;
+  padding-right:2em;
 }
 
+/* NAVIGATION END */
 
 /*------BANNER START------*/
 .banner {
@@ -207,18 +182,6 @@ p {
 
 
 /* EVENTS PAGE END */
-
-
-
-/* LEADERSHIP PAGE START */
-.w3-padding-16 {
-  padding-left: 16px;
-  padding-right: 16px;
-}
-
-
-/* LEADERSHIP PAGE END */
-
 
 /*------SISTERHOOD PAGE START------*/
 
@@ -353,9 +316,6 @@ p {
 .footer-text2{
   margin-top: 1em;
   margin-bottom: 2vh;
-
- /* margin-top: 2.75vh;
-  margin-bottom:3vh;* /
   color:white;
   text-align: center;
   font-family: Quicksand;
