--- a/tridelta.css
+++ b/tridelta.css
@@ -272,28 +272,31 @@ h6 {
 
 .ginsystem-login input {
   width: 80%;
-  font-size: 1em;
+  /*font-size: 1em;*/
+  font-size: 15px;
 }
 
 .gin-login {
   width: 40%;
   display: block;
   margin: 0px auto;
-  font-size: 1.25em;
-  font-size:1.25vw;
+  font-size:15px;
+  /*font-size: 1.25em;
+  font-size:1.25vw;*/
   align-content: center;
 }
 
 .username, .password {
-  margin: 0.5em auto;
+  margin: 2.5% auto;
 }
 
 
 
 .ginsystem-login form {
   align-content: center;
-  font-size: 1.25em;
-  font-size:1.25vw;
+  /*font-size: 1.25em;
+  font-size:1.25vw;*/
+  font-size:15px;
 }
 
 
@@ -303,8 +306,9 @@ h6 {
   color:white;
   text-align: center;
   font-family: Quicksand;
-  font-size: 1.25em;
-  font-size:1.6vw;
+  font-size: 25px;
+ /* font-size: 1.25em;
+  font-size:1.6vw;*/
   font-weight: bold;
   align-content: center;
 }
@@ -314,14 +318,16 @@ h6 {
   color:white;
   text-align: center;
   font-family: Quicksand;
-  font-size: 1em;
-  font-size:1.6vw;
+  font-size: 20px;
+  /*font-size: 1em;
+  font-size:1.6vw;*/
   font-weight: bold;
   align-content: center;
 }
 
 .footer-text1 > .gamma-lambda{
-  font-size:1vw;
+  /*font-size:1vw;*/
+  font-size:15px;
   font-style: italic;
   margin-bottom: 4%;
 }
@@ -331,8 +337,9 @@ h6 {
   color:white;
   text-align: center;
   font-family: Quicksand;
-  font-size: 1.25em;
-  font-size:2.1vw;
+  font-size: 25px;
+/*  font-size: 1.25em;
+  font-size:2.1vw;*/
   font-weight: bolder;
   align-content: center;
 }
@@ -343,8 +350,9 @@ h6 {
   color:white;
   text-align: center;
   font-family: Quicksand;
-  font-size: 1.25em;
-  font-size:2.1vw;
+  font-size: 25px;
+  /*font-size: 1.25em;
+  font-size:2.1vw;*/
   font-weight: bolder;
   align-content: center;
 }
@@ -355,8 +363,9 @@ h6 {
   color:white;
   text-align: center;
   font-family: Quicksand;
-  font-size: 1.25em;
-  font-size:1.5vw;
+  font-size:15px;
+  /*font-size: 1.25em;
+  font-size:1.5vw;*/
   font-weight: lighter;
   align-content: center;
 }
@@ -394,7 +403,8 @@ h6 {
 .copy-right{
   text-align: center;
   color:#ffffff;
-  font-size:2vh;
+  font-size:10px;
+  /*font-size:2vh;*/
   margin-top: 1%;
   font-family: Quicksand;
 }
