Fixed navbar centered and added slick

--- a/sisterhood.css
+++ b/sisterhood.css
@@ -26,54 +26,6 @@ body {
  
 
 
-
-h1 {
-  font-family: Quicksand;
-  text-transform: uppercase;
-  font-size: 3.5em;
-  font-size: 3.2vw;
-}
-
-h2 {
-  font-family: Quicksand;
-  font-weight: bolder;
-  font-size: 1.5em;
-  font-size:3.2vw;
-}
-
-
-h3 {
-  font-family: Quicksand;
-  font-size: 1.5em;
-  font-size:2.3vw;
-}
-
-h4 {
-  font-family: "Dancing Script";
-  font-size: 2.4em;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: 500;
-  line-height: 26.4%;
-}
-
-h5{
-  font-family: Quicksand;
-  font-size: 0.5em;
-  font-size:1.5vw;
-}
-
-h6 {
-  font-size: 3.5em;
-  font-size: 4.5vw;
-  text-align: center;
-  font-family: 'Handlee', cursive;
-  text-shadow: 4px 4px 3px rgba(0,0,0,0.1); 
-  letter-spacing: 0.3em;
-}
-
-
-
 /*------NAVIGATION START------*/
 .navbar-collapse {
   text-align:center;
@@ -86,6 +38,12 @@ h6 {
   font-size: 1em;
   padding-left: 1em;
   padding-right: 1em;
+}
+
+#hamburger {
+  position: absolute;
+  right: 5px;
+  top: 15px;
 }
 
 .logo-margin{
@@ -134,54 +92,6 @@ h6 {
 }
 /* BANNER END */
 
-
-/*------------------EVENTS PAGE START-------------------*/
-@media (max-width: 375px) {
-    .events-spacing {
-        width: 65%;
-    }
-}
-
-@media (max-width: 414px) {
-    .events-spacing {
-        width: 65%;
-    }
-}
-
-.events-page {
-  margin-top: 2.5em;
-  font-family: Quicksand;
-  margin-bottom: 2.5em;
-}
-
-.events-page > h1 {
-  font-family: Quicksand;
-  text-transform: uppercase;
-  font-size: 7em;
-  font-size: 3.2vw;
-}
-
-.events-spacing{
-  margin-top:5%;
-  margin-bottom: 7.5%;
-}
-
-.eventbox{
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-
-
-/* EVENTS PAGE END */
-
-/*----------------------SISTERHOOD PAGE START-------------------*/
 
 .sisterhood-page{
   margin-top: 3em;
@@ -257,78 +167,6 @@ h6 {
 }
 /* SISTERHOOD PAGE END */
 
-/*------------------- RECRUITMENT PAGE START -----------------*/
-.recruitment-body {
-  font-family:Quicksand;
-  font-size:1em;
-  text-align: left;
-  padding-left: 10%;
-}
-.recruitment-dlm {
-  margin-top:1em;
-  font-family:Quicksand;
-  font-size:1em;
-  text-align: center;
-}
-.recruitment-chair {
-  margin-top:1em;
-  font-family:Quicksand;
-  font-size:2em;
-  text-align: center;
-}
-.recruitment-name{
-  margin-top:1em;
-  font-family:Quicksand;
-  font-size:2.5em;
-  text-align: center;
-}
-.recruitment-section{
-  margin-top:7.5%;
-}
-.margin{
-  margin-top:20%;
-  margin-bottom:20.5%;
-}
-/*------------------------ RECRUITMENT END --------------- */
-
-/*------------------------ PHILANTHROPY START -------------*/
-
- .philanthropy-body {
-  font-family:Quicksand;
-  font-size:1em;
-  text-align: left;
-  padding-left: 10%;
-}
-.philanthropy-dlm {
-  margin-top:1em;
-  font-family:Quicksand;
-  font-size:1em;
-  text-align: center;
-}
-.philanthropy-chair{
-  margin-top:1em;
-  font-family:Montserrat;
-  font-size:2em;
-  text-align: center;
-}
-.philanthropy-name{
-  margin-top:1em;
-  font-family:Quicksand;
-  font-size:2.5em;
-  text-align: center;
-}
-.philanthropy-section{
-  margin-top:7.5%
-  margin-bottom:7.5%;
-}
-
-/*---------------------PHILANTHROPY END--------------------- */
-
-/*-------------------------------LEADERSHIP--------------------------*/
-.leadershippage{
-  margin-top:5%;
-  margin-bottom:10%;
-}
 
 
 
@@ -347,7 +185,7 @@ h6 {
   width: 40%;
   display: block;
   margin: 0px auto;
-  font-size:15px;
+  font-size:1em;
   /*font-size: 1.25em;
   font-size:1.25vw;*/
   align-content: center;
@@ -363,7 +201,7 @@ h6 {
   align-content: center;
   /*font-size: 1.25em;
   font-size:1.25vw;*/
-  font-size:15px;
+  font-size:1em;
 }
 
 
@@ -373,7 +211,7 @@ h6 {
   color:white;
   text-align: center;
   font-family: Quicksand;
-  font-size: 25px;
+  font-size: 1.5em;
  /* font-size: 1.25em;
   font-size:1.6vw;*/
   font-weight: bold;
@@ -385,7 +223,7 @@ h6 {
   color:white;
   text-align: center;
   font-family: Quicksand;
-  font-size: 20px;
+  font-size: 1.25em;
   /*font-size: 1em;
   font-size:1.6vw;*/
   font-weight: bold;
@@ -394,7 +232,7 @@ h6 {
 
 .footer-text1 > .gamma-lambda{
   /*font-size:1vw;*/
-  font-size:15px;
+  font-size:0.75em;
   font-style: italic;
   margin-bottom: 4%;
 }
@@ -447,6 +285,15 @@ h6 {
   font-size:5vh; 
 }
 
+.ho:hover {
+    opacity: 0.5;
+}
+
+a:hover {
+    color: white;
+    text-decoration-line: none;
+}
+
 .fa-instagram{
   margin-right: 10px;
   font-size:5vh; 
@@ -470,7 +317,7 @@ h6 {
 .copy-right{
   text-align: center;
   color:#ffffff;
-  font-size:10px;
+  font-size:0.75em;
   /*font-size:2vh;*/
   margin-top: 1%;
   font-family: Quicksand;
@@ -484,18 +331,5 @@ h6 {
 }
 
 
-/* Slick CSS */
 
-.slick-arrow, .slick-arrow:focus, .slick-arrow:active {
-  background-color: #000;
-}
 
-.slick-prev {
-  left: 0px;
-  z-index: 5;
-}
-
-.slick-next {
-  right: 0px;
-  z-index: 5;
-}
