sisterhood slideshow changes

--- a/sisterhood.css
+++ b/sisterhood.css
@@ -342,6 +342,50 @@ a:hover {
   margin-bottom: 30px;
 }
 
+/* Slideshow stack */
+  #stage {
+    margin: 1em auto;
+    width: 100%;
+    height: 100%;
+    padding-bottom: 2rem;
+  }
 
+  #stage a {
+    position: absolute;
+  }
+  #stage a img {
+    padding: .5rem;
+    border: .15rem solid #ccc;
+    background: #fff;
+  }
 
+  #stage a:nth-of-type(1) {
+    animation-name: fader;
+    animation-delay: 4s;
+    animation-duration: 1s;
+    z-index: 20;
+  }
+  #stage a:nth-of-type(2) {
+    z-index: 10;
+  }
+  #stage a:nth-of-type(n+3) {
+    display: none;
+  }
+
+  @keyframes fader {
+    from { opacity: 1.0; }
+    to   { opacity: 0.0; }
+  }
+  #stage a::after {
+    position: absolute;
+    left: .72rem;
+    bottom: .85rem;
+    padding: 2px 0;
+    width: calc(100% - 22px);
+    background: rgba(0,0,0,0.25);
+    text-align: center;
+    content: attr(title);
+    font-size: 1.1rem;
+    color: #fff;
+  }
 
