--- a/events.css
+++ b/events.css
@@ -1,14 +1,8 @@
-/*!
- * Start Bootstrap - Modern Business (https://startbootstrap.com/template-overviews/modern-business)
- * Copyright 2013-2017 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-logomodern-business-nav/blob/master/LICENSE)
- */
 
-@import url(https://fonts.googleapis.com/css?family=Quicksand);
-@import url(https://fonts.googleapis.com/css?family=Montserrat);
-@import url(https://fonts.googleapis.com/css?family=Fredericka+the+Great);
+@import url('https://fonts.googleapis.com/css?family=League+Script|Quicksand:300,400,500,700');
 @import url(https://fonts.googleapis.com/css?family=Handlee);
 @import url(https://fonts.googleapis.com/css?family=Dancing+Script);
+@import url('https://fonts.googleapis.com/css?family=Petit+Formal+Script');
 
 /*body{
    font-family: 'Open Sans',serif;
@@ -23,29 +17,26 @@ body {
     padding-top: 0px;
   }
 }*/
- 
-
-
 
 h1 {
   font-family: Quicksand;
   text-transform: uppercase;
   font-size: 3.5em;
-  font-size: 3.2vw;
+/*  font-size: 3.2vw;*/
 }
 
 h2 {
   font-family: Quicksand;
   font-weight: bolder;
   font-size: 1.5em;
-  font-size:3.2vw;
+/*  font-size:3.2vw;*/
 }
 
 
 h3 {
   font-family: Quicksand;
   font-size: 1.5em;
-  font-size:2.3vw;
+ /* font-size:2.3vw;*/
 }
 
 h4 {
@@ -59,81 +50,43 @@ h4 {
 
 h5{
   font-family: Quicksand;
-  font-size: 0.5em;
-  font-size:1.5vw;
-}
-
-h6 {
-  font-size: 3.5em;
-  font-size: 4.5vw;
-  text-align: center;
-  font-family: 'Handlee', cursive;
-  text-shadow: 4px 4px 3px rgba(0,0,0,0.1); 
-  letter-spacing: 0.3em;
+  font-size: 1em;
+/*  font-size:1.5vw;*/
 }
 
 
-
-/*------NAVIGATION START------*/
-.navbar-collapse {
-  text-align:center;
-  margin-top: 2.75em;
-}
 
 .navbar{
-  font-family: Montserrat;
+  font-family: 'Quicksand', sans-serif;
   font-weight: bold;
-  font-size: 1em;
-  padding-left: 1em;
-  padding-right: 1em;
 }
 
-.logo-margin{
-  margin-bottom: -50px;
-  z-index: 1;
+a:hover{
+  color: #FFBFB7 !important;
 }
 
-.navbar-nav > li{
-  padding-left:2em;
-  padding-right:2em;
+.logo {
+  width: 30%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top:2.5%;
 }
-
-/* NAVIGATION END */
 
 /*------BANNER START------*/
 .banner {
-  margin-top:2.5em;
-  width:100%;
-  min-height: 75%;
-  max-height: 75%;
   overflow-y: hidden;
   display: block;
   position: relative;
 }
 
 .banner > .banner-image {
-  opacity: 0.65;
   width:100%;
+  height: 100%;
   display:block;
 }
-
-.banner > .banner-text {
-  text-align: center;
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #FF940C;
-  text-shadow: 3px 5px 4px rgba(0,0,0,0.3);
-  letter-spacing: 1em;
-  font-family: Montserrat;
-  text-transform: uppercase;
-  font-size: 3.2vw;
-  font-weight: bolder;
-
-}
 /* BANNER END */
-
 
 /*------------------EVENTS PAGE START-------------------*/
 @media (max-width: 375px) {
@@ -148,6 +101,14 @@ h6 {
     }
 }
 
+.month-title {
+    text-align: center;
+  margin-top: 5%;
+  font-size:4em;
+  color: #FFBFB7;
+  font-weight: bold;
+  font-family: 'Petit Formal Script', cursive;
+}
 .events-page {
   margin-top: 2.5em;
   font-family: Quicksand;
@@ -182,9 +143,32 @@ h6 {
 /* EVENTS PAGE END */
 
 
+/* Grid styles -------------------------------------------------*/
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-gap: 30px;
+}
+
+.cards {
+  max-width: 960px;
+  margin: 0 auto 30px;
+}
+
+article {
+  position: relative;
+}
+
+.article-img {
+  height: 300px;
+  width: 100%;
+  object-fit: cover;
+}
+
+
 /*---------------------------FOOTER START--------------------*/
 .ginsystem-login {
-  font-family: Montserrat;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .ginsystem-login input {
@@ -194,13 +178,21 @@ h6 {
 }
 
 .gin-login {
-  width: 40%;
+  width: 80%;
   display: block;
   margin: 0px auto;
   font-size:15px;
   /*font-size: 1.25em;
   font-size:1.25vw;*/
-  align-content: center;
+  /*align-content: center;*/
+  background-color: #f6a993; 
+}
+
+.forgot {
+    font-size: 1rem;
+    color: white;
+    text-align: center;
+    font-style: italic;
 }
 
 .username, .password {
@@ -219,10 +211,10 @@ h6 {
 
 
 .footer-text{
-  margin-top: 5%;
+  /*margin-top: 5%;*/
   color:white;
   text-align: center;
-  font-family: Quicksand;
+  font-family: 'Quicksand', sans-serif;
   font-size: 25px;
  /* font-size: 1.25em;
   font-size:1.6vw;*/
@@ -234,7 +226,7 @@ h6 {
   margin-top: 10%;
   color:white;
   text-align: center;
-  font-family: Quicksand;
+  font-family: 'Quicksand', sans-serif;
   font-size: 20px;
   /*font-size: 1em;
   font-size:1.6vw;*/
@@ -249,43 +241,59 @@ h6 {
   margin-bottom: 4%;
 }
 .footer-text2{
-  margin-top: 5%;
-  margin-bottom: 2%;
+ /* margin-top: 5%;*/
+  margin-bottom: 1%;
   color:white;
   text-align: center;
-  font-family: Quicksand;
+  font-family: 'Quicksand', sans-serif;
   font-size: 25px;
 /*  font-size: 1.25em;
   font-size:2.1vw;*/
-  font-weight: bolder;
+/*  font-weight: bolder;*/
   align-content: center;
 }
 
 .contact-us{
-  margin-top: 3%;
+  /*margin-top: 3%;*/
   /*margin-bottom: 2vh;*/
   color:white;
-  text-align: center;
-  font-family: Quicksand;
+  font-family: 'Quicksand', sans-serif;
   font-size: 25px;
   /*font-size: 1.25em;
   font-size:2.1vw;*/
-  font-weight: bolder;
+  /*font-weight: bolder;*/
   align-content: center;
+  margin-bottom: 1%;
+}
+
+.contact{
+  text-align: center;
+}
+
+.social{
+  margin-bottom: 2%
+}
+
+.chapter {
+  text-align: center;
+  font-family:  'Quicksand', sans-serif;
+ /* font-weight:500;*/
+  color: white;
+  font-size: 1.25em;
 }
 
 .vppr-email{
   margin-top: -2%;
   margin-bottom: 2vh;
   color:white;
-  text-align: center;
-  font-family: Quicksand;
+  font-family: 'Quicksand', sans-serif;
   font-size:15px;
   /*font-size: 1.25em;
   font-size:1.5vw;*/
   font-weight: lighter;
   align-content: center;
 }
+
 
 .social-media {
   color: white;
@@ -295,6 +303,15 @@ h6 {
 .fa-facebook-f{
   margin-right: 10px;
   font-size:5vh; 
+}
+
+.ho:hover {
+    opacity: 0.5;
+}
+
+a:hover {
+    color: white;
+    text-decoration-line: none;
 }
 
 .fa-instagram{
@@ -317,21 +334,25 @@ h6 {
   margin-right: 10px;
   font-size:5vh; 
 }
+
 .copy-right{
   text-align: center;
   color:#ffffff;
   font-size:10px;
   /*font-size:2vh;*/
   margin-top: 1%;
-  font-family: Quicksand;
+  font-family: 'Quicksand', sans-serif;
 }
 
 /* FOOTER END */
 
 
-.portfolio-item {
-  margin-bottom: 30px;
-}
+
+
+
+
+
+
 
 
 
