--- a/index.css
+++ b/index.css
@@ -1,96 +1,40 @@
-
-@import url(https://fonts.googleapis.com/css?family=Quicksand);
-@import url(https://fonts.googleapis.com/css?family=Montserrat);
-@import url(https://fonts.googleapis.com/css?family=Fredericka+the+Great);
-
-body{
-    overflow-x: hidden;
-}
+@import url('https://fonts.googleapis.com/css?family=League+Script|Quicksand:300,400,500,700');
+@import url(https://fonts.googleapis.com/css?family=Handlee);
+@import url(https://fonts.googleapis.com/css?family=Dancing+Script);
+@import url('https://fonts.googleapis.com/css?family=Petit+Formal+Script');
 
 /*body{
-        padding-top:-40px;
-    }
- 
-  @media screen and (max-width: 767px) {
-      body { padding-top: 30px; }
-  }
-  @media screen and (min-width:768px) and (max-width: 991px) {
-      body { padding-top: 90px; }
-  }
-  @media screen and (min-width: 992px) {
-      body { padding-top: 30px; }
-  }*/
-
-.contentbox{
-    padding: 0px;
-    margin: 0px;
-}
-h1 {
-  font-family: Quicksand;
-  text-transform: uppercase;
-  font-size: 3.5em;
-  font-size: 3.2vw;
-}
-
-h2 {
-  font-family: Quicksand;
-  font-weight: bold;
-  font-size: 1.5em;
-  font-size:3.2vw;
-}
-
-
-h3 {
-  font-family: Quicksand;
-  font-size: 1.5em;
-  font-size:2.3vw;
-}
-
-p {
-  font-family: Quicksand;
-  font-size:0.5em;
-  font-size:3.2vw;
-}
-
-//*------NAVIGATION START------*/
-.navbar-collapse {
-  text-align:right;
-}
-@media screen and (max-width: 767px) {
-#left-nav {
-  margin-top: 2.75em;
-}
-}
-/*#right-nav{
-  margin-top: 2.75em
+   font-family: 'Open Sans',serif;
 }*/
 
+body {
+  padding-top: 0%;
+}
+
+/*@media and (min-width: 2px) {
+  body {
+    padding-top: 0px;
+  }
+}*/
+
+
 .navbar{
-  font-family: Montserrat;
+  font-family: 'Quicksand', sans-serif;
   font-weight: bold;
-  font-size: 1em;
-  padding-left: 1em;
-  padding-right: 1em;
 }
 
-#hamburger {
-  position: absolute;
-  right: 5px;
-  top: 15px;
+a:hover{
+  color: #FFBFB7 !important;
 }
 
-.logo-margin{
-  margin-bottom: -50px;
-  z-index: 1;
+.logo {
+  width: 30%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top:2.5%;
 }
-
-.navbar-nav > li{
-  padding-left:2em;
-  padding-right:2em;
-}
-
-/* NAVIGATION END */
-
 
 /*------BANNER START------*/
 .banner {
@@ -104,29 +48,51 @@ p {
   height: 100%;
   display:block;
 }
-
-/*.banner > .banner-text {
-  text-align: center;
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #FF940C;
-  text-shadow: 3px 5px 4px rgba(0,0,0,0.3);
-  letter-spacing: 1em;
-  font-family: Montserrat;
-  text-transform: uppercase;
-  font-size: 3.2vw;
-  font-weight: bolder;
-
-}*/
 /* BANNER END */
 
+/*---------------Welcome Statement Start--------------------*/
+.welcome{
+  font-family: 'Quicksand', sans-serif;
+  font-size:1.25em;
+  margin-bottom: 5%;
+}
+
+/*---------------------------Welcome End--------------------*/
+.welcome-title {
+  text-align: center;
+  margin-top: 5%;
+  font-size:2.25em;
+  color: #FFBFB7;
+  font-weight: bold;
+  font-family: 'Petit Formal Script', cursive;
+}
+
+/* Grid styles -------------------------------------------------*/
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-gap: 30px;
+}
+
+.cards {
+  max-width: 960px;
+  margin: 0 auto 30px;
+}
+
+article {
+  position: relative;
+}
+
+.article-img {
+  height: 300px;
+  width: 100%;
+  object-fit: cover;
+}
+
+
 /*---------------------------FOOTER START--------------------*/
-
-
 .ginsystem-login {
-  font-family: Montserrat;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .ginsystem-login input {
@@ -136,13 +102,21 @@ p {
 }
 
 .gin-login {
-  width: 40%;
+  width: 80%;
   display: block;
   margin: 0px auto;
   font-size:15px;
   /*font-size: 1.25em;
   font-size:1.25vw;*/
-  align-content: center;
+  /*align-content: center;*/
+  background-color: #f6a993; 
+}
+
+.forgot {
+    font-size: 1rem;
+    color: white;
+    text-align: center;
+    font-style: italic;
 }
 
 .username, .password {
@@ -161,10 +135,10 @@ p {
 
 
 .footer-text{
-  margin-top: 5%;
+  /*margin-top: 5%;*/
   color:white;
   text-align: center;
-  font-family: Quicksand;
+  font-family: 'Quicksand', sans-serif;
   font-size: 25px;
  /* font-size: 1.25em;
   font-size:1.6vw;*/
@@ -176,7 +150,7 @@ p {
   margin-top: 10%;
   color:white;
   text-align: center;
-  font-family: Quicksand;
+  font-family: 'Quicksand', sans-serif;
   font-size: 20px;
   /*font-size: 1em;
   font-size:1.6vw;*/
@@ -191,43 +165,59 @@ p {
   margin-bottom: 4%;
 }
 .footer-text2{
-  margin-top: 5%;
-  margin-bottom: 2%;
+ /* margin-top: 5%;*/
+  margin-bottom: 1%;
   color:white;
   text-align: center;
-  font-family: Quicksand;
+  font-family: 'Quicksand', sans-serif;
   font-size: 25px;
 /*  font-size: 1.25em;
   font-size:2.1vw;*/
-  font-weight: bolder;
+/*  font-weight: bolder;*/
   align-content: center;
 }
 
 .contact-us{
-  margin-top: 3%;
+  /*margin-top: 3%;*/
   /*margin-bottom: 2vh;*/
   color:white;
-  text-align: center;
-  font-family: Quicksand;
+  font-family: 'Quicksand', sans-serif;
   font-size: 25px;
   /*font-size: 1.25em;
   font-size:2.1vw;*/
-  font-weight: bolder;
+  /*font-weight: bolder;*/
   align-content: center;
+  margin-bottom: 1%;
+}
+
+.contact{
+  text-align: center;
+}
+
+.social{
+  margin-bottom: 2%
+}
+
+.chapter {
+  text-align: center;
+  font-family:  'Quicksand', sans-serif;
+ /* font-weight:500;*/
+  color: white;
+  font-size: 1.25em;
 }
 
 .vppr-email{
   margin-top: -2%;
   margin-bottom: 2vh;
   color:white;
-  text-align: center;
-  font-family: Quicksand;
+  font-family: 'Quicksand', sans-serif;
   font-size:15px;
   /*font-size: 1.25em;
   font-size:1.5vw;*/
   font-weight: lighter;
   align-content: center;
 }
+
 
 .social-media {
   color: white;
@@ -237,6 +227,15 @@ p {
 .fa-facebook-f{
   margin-right: 10px;
   font-size:5vh; 
+}
+
+.ho:hover {
+    opacity: 0.5;
+}
+
+a:hover {
+    color: white;
+    text-decoration-line: none;
 }
 
 .fa-instagram{
@@ -259,84 +258,20 @@ p {
   margin-right: 10px;
   font-size:5vh; 
 }
+
 .copy-right{
   text-align: center;
   color:#ffffff;
   font-size:10px;
   /*font-size:2vh;*/
   margin-top: 1%;
-  font-family: Quicksand;
+  font-family: 'Quicksand', sans-serif;
 }
 
 /* FOOTER END */
 
 
-.portfolio-item {
-  margin-bottom: 30px;
-}
 
 
 
 
-/*/* PRES LETTER START */
-
-.presidentbox{
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    padding: 0px;
-}
-#presidentpic{
-    text-align: center;
-}
-#presidentletter{
-    text-align: center;
-}
-#1x2box{
-    width: 100%;
-}
-#picofprez{
-    width: 75%;
-}*/
-
-/*PRES LETTER END*/
-
-/*IMAGE GALLERY START*/
-
-
-/*#gallerypic{
-    height: 100%;
-    width: 100%;
-    padding: 1rem;
-}
-.col-md-6{
-}
-#presidentletterbox{
-    width: 100%;
-    background-color: cornsilk;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-}
-#presidentcard{
-    padding-bottom: 1rem;
-}
-#w3contentbox{
-    padding-left: 3rem;
-    padding-right: 3rem;
-}
-#letterformatbox{
-    padding: 2rem;
-    float: right;
-}
-#presidentcardbox{
-    width:40%;
-}
-.gallerybox{
-    margin-bottom: 2rem;
-    padding: 2rem;
-}
-.mySlides{
-    max-height: 30%;
-}
-a{
-    font-size: 1.5rem;
-}*/
