--- a/recruitment.css
+++ b/recruitment.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css?family=League+Script|Quicksand:300,400,500,700');
 @import url(https://fonts.googleapis.com/css?family=Handlee);
 @import url(https://fonts.googleapis.com/css?family=Dancing+Script);
@@ -17,6 +18,81 @@ body {
   }
 }*/
 
+h1 {
+  font-family: Quicksand;
+  text-transform: uppercase;
+  font-size: 3.5em;
+/*  font-size: 3.2vw;*/
+}
+
+h2 {
+  font-family: Quicksand;
+  font-weight: bolder;
+  font-size: 1.5em;
+/*  font-size:3.2vw;*/
+}
+
+
+h3 {
+  font-family: Quicksand;
+  font-size: 1.5em;
+ /* font-size:2.3vw;*/
+}
+
+h4 {
+  font-family: "Dancing Script";
+  font-size: 2.4em;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: 500;
+  line-height: 26.4%;
+}
+
+h5{
+  font-family: Quicksand;
+  font-size: 1em;
+/*  font-size:1.5vw;*/
+}
+
+/* PHILANTHROPY */
+.carousel-inner img {
+  width: 100%;
+  height: 100%;
+}
+.full-container{
+  margin-right: -2000px;
+  margin-left: -2000px;
+}
+.full-content{
+  padding-left: 2000px;
+  padding-right: 2000px;
+}
+
+.full-padding{
+  padding-top: 150px;
+  padding-bottom:150px;
+}
+/* Make the image fully responsive */
+.carousel-inner img {
+  width: 100%;
+  height: 100%;
+}
+
+.title-style{
+  font-family:Petit Formal Script;
+  font-size:2.25em;
+  color: #FFBFB7;
+  text-align:center;
+}
+.body-style{
+  font-family:Quicksand;
+  font-size:1.25em;
+}
+/* END PHILANTHROP */
+
+hr.style {
+  border-top: 2px dotted pink;
+}
 
 .navbar{
   font-family: 'Quicksand', sans-serif;
@@ -28,12 +104,12 @@ a:hover{
 }
 
 .logo {
-  width: 30% !important;
-  height: auto !important;
-  display: block !important;
-  margin-left: auto !important;
-  margin-right: auto !important;
-  margin-top:2.5% !important;
+  width: 30%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top:2.5%;
 }
 
 /*------BANNER START------*/
@@ -50,22 +126,60 @@ a:hover{
 }
 /* BANNER END */
 
-/*---------------Welcome Statement Start--------------------*/
-.welcome{
-  font-family: 'Quicksand', sans-serif;
-  font-size:1.25em;
-  margin-bottom: 5%;
+/*------------------EVENTS PAGE START-------------------*/
+@media (max-width: 375px) {
+    .events-spacing {
+        width: 65%;
+    }
 }
 
-/*---------------------------Welcome End--------------------*/
-.welcome-title {
-  text-align: center;
+@media (max-width: 414px) {
+    .events-spacing {
+        width: 65%;
+    }
+}
+
+.month-title {
+    text-align: center;
   margin-top: 5%;
-  font-size:2.25em;
+  font-size:4em;
   color: #FFBFB7;
   font-weight: bold;
   font-family: 'Petit Formal Script', cursive;
 }
+.events-page {
+  margin-top: 2.5em;
+  font-family: Quicksand;
+  margin-bottom: 2.5em;
+}
+
+.events-page > h1 {
+  font-family: Quicksand;
+  text-transform: uppercase;
+  font-size: 7em;
+  font-size: 3.2vw;
+}
+
+.events-spacing{
+  margin-top:5%;
+  margin-bottom: 7.5%;
+}
+
+.eventbox{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+
+
+/* EVENTS PAGE END */
+
 
 /* Grid styles -------------------------------------------------*/
 .cards {
@@ -269,9 +383,3 @@ a:hover {
 }
 
 /* FOOTER END */
-
-
-
-
-
-
